# oscar-bender-stone.github.io

./: .markdownlint.json  Justfile  README.md  REUSE.toml  config.js  index.html  pandoc-config.yaml  pandoc-metadata.yaml  style.css
LICENSES/: LicenseRef-Proprietary.txt
assets/: interests.json  interests.txt  publications.bib
assets/csl/: acm.csl
assets/icons/: favicon.ico.license
assets/images/: interests_cloud.png.license
docs/: index.html  publications.html
markdown/: about.md  index.md  publications.md
markdown/blog/: index.md
markdown/blog/posts/: intro.md
pages/: about.html  publications.html
pages/blog/: index.html
pages/blog/posts/: intro.html
pages/css/: style.css
pagesblog/: index.html
pagesmarkdown/: about.html  publications.html
pagesmarkdown/blog/: index.html
scripts/: build-page.sh
scripts/pandoc/: config.yaml
source/: config.js  publications.bib  style.css
source/css/: style.css
source/js/: config.js  loaders.js  main.js
source/python/: .gitignore  README.md  my_wordcloud.py  pyproject.toml
source/templates/: _body.html  _footer.html  _header.html  _navigation.html  _page.html  _site.html
templates/: _navigation.html  index.md  publications.md
