# SPDX-FileCopyrightText: 2026 Oscar Bender-Stone <oscar-bender-stone@protonmail.com>
# SPDX-License-Identifier: MIT

[project]
name = "python"
version = "0.1.0"
description = "Python tooling for website components."
classifiers = ["Private :: Do Not Upload"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "wordcloud>=1.9.6",
]

[tool.uv]
package = false
